httpd/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: httpd
  name: httpd
  namespace: httpd
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-httpd
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd
    deploymentconfig: httpd
  sessionAffinity: None
  type: ClusterIP
