httpd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  host: httpd-httpd.apps.book.ocp-poc-demo.com
  port:
    targetPort: http-httpd
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
